--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
 @tailwind utilities;
 
+:root {
+  --t-color: 0s;
+  --bg-emote--gradient: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.3),
+    rgba(255, 255, 255, 0.3)
+  );
+}
+
 .bg-emote {
   background-position: bottom right;
   background-repeat: no-repeat;
   background-blend-mode: multiply;
   background-attachment: fixed;
   background-size: min(448px, 50vw);
-  --bg-emote--gradient: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 0.3),
-    rgba(255, 255, 255, 0.3)
-  );
 }
 
 .bg-emote--ahhh {
