--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
   --t-color: 0s;
   --bg-emote--gradient: linear-gradient(
     to bottom,
+    rgba(255, 255, 255, 0.7),
+    rgba(255, 255, 255, 0.7)
+  );
+}
+
+:root.dark {
+  --bg-emote--gradient: linear-gradient(
+    to bottom,
     rgba(255, 255, 255, 0.3),
     rgba(255, 255, 255, 0.3)
   );
@@ -12,29 +20,38 @@
 .bg-emote {
   background-position: bottom right;
   background-repeat: no-repeat;
-  background-blend-mode: multiply;
   background-attachment: fixed;
   background-size: min(448px, 50vw);
 }
 
+.dark.bg-emote,
+.dark .bg-emote {
+  background-blend-mode: multiply;
+}
+
 .bg-emote--ahhh {
-  background-image: url("/emotes/ahhh.png"), var(--bg-emote--gradient);
+  background-image: var(--bg-emote--gradient), url("/emotes/ahhh.png"),
+    var(--bg-emote--gradient);
 }
 
 .bg-emote--heart {
-  background-image: url("/emotes/heart.png");
+  background-image: var(--bg-emote--gradient), url("/emotes/ahhh.png"),
+    var(--bg-emote--gradient);
 }
 
 .bg-emote--hi {
-  background-image: url("/emotes/hi.png");
+  background-image: var(--bg-emote--gradient), url("/emotes/ahhh.png"),
+    var(--bg-emote--gradient);
 }
 
 .bg-emote--lurk {
-  background-image: url("/emotes/lurk.png");
+  background-image: var(--bg-emote--gradient), url("/emotes/ahhh.png"),
+    var(--bg-emote--gradient);
 }
 
 .bg-emote--stab {
-  background-image: url("/emotes/stab.png");
+  background-image: var(--bg-emote--gradient), url("/emotes/ahhh.png"),
+    var(--bg-emote--gradient);
 }
 
 .button {
